// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRouteTree > from 0 modules 1`] = `[Error: Routes were not built]`;

exports[`buildRouteTree > from 1 module 1`] = `
{
  "elements": {},
  "loaded": false,
  "modules": [
    {
      "fileName": "_layout.tsx",
      "id": "src/_layout.tsx",
      "importFn": [Function],
    },
  ],
  "path": "/",
  "test": {
    "keys": [],
    "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
  },
}
`;

exports[`buildRouteTree > from 2 modules 1`] = `
{
  "elements": {},
  "loaded": false,
  "modules": [
    {
      "fileName": "_layout.tsx",
      "id": "src/_layout.tsx",
      "importFn": [Function],
    },
  ],
  "path": "/",
  "test": {
    "keys": [],
    "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
  },
  "tree": [
    {
      "elements": {},
      "loaded": false,
      "modules": [
        {
          "fileName": "_layout.tsx",
          "id": "src/abc/_layout.tsx",
          "importFn": [Function],
        },
      ],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  ],
}
`;

exports[`buildRouteTree > from 3 modules 1`] = `
{
  "elements": {},
  "loaded": false,
  "modules": [
    {
      "fileName": "_layout.tsx",
      "id": "src/_layout.tsx",
      "importFn": [Function],
    },
  ],
  "path": "/",
  "test": {
    "keys": [],
    "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
  },
  "tree": [
    {
      "elements": {},
      "loaded": false,
      "modules": [
        {
          "fileName": "_layout.tsx",
          "id": "src/xyz/_layout.tsx",
          "importFn": [Function],
        },
        {
          "fileName": "_index.tsx",
          "id": "src/xyz/_index.tsx",
          "importFn": [Function],
        },
      ],
      "path": "/xyz",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  ],
}
`;
